# ml-movie-recommendation-app

./: .gitignore  movie-recommender-system-project.ipynb
movie-recommendation-app/: compose.yaml  readme.md
movie-recommendation-app/client/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
movie-recommendation-app/client/src/: App.tsx  MovieSelection.tsx  RecommendMovies.tsx
movie-recommendation-app/client/src/components/: ExternalLinkSvg.tsx  MovieListCard.tsx  MoviesList.tsx
movie-recommendation-app/client/src/types/: index.ts
movie-recommendation-app/server/: Dockerfile  README.md  main.py  pyproject.toml
movie-recommendation-app/server/app/: constants.py  list_movies.py  load_assets.py  movie_recommendation.py
notebook-lab/: main.py  movie-recommender-system-project.ipynb  pyproject.toml
