[project]
name = "movie-recommendation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.2",
    "jupyterlab>=4.4.9",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[tool.uv.workspace]
members = [
    "fastapi-app",
]
